--- a/build.gradle
+++ b/build.gradle
@@ -4,11 +4,15 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0'
+        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.novoda:bintray-release:0.7.0'
     }
 }
 
 allprojects {
+    group GROUP
+    version VERSION_NAME
+
     repositories {
         google()
         jcenter()
