--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,6 @@
-# Project-wide Gradle settings.
+GROUP=net.mready.progresslayouts
+VERSION_NAME=1.0.0
 
-# IDE (e.g. Android Studio) users:
-# Gradle settings configured through the IDE *will override*
-# any settings specified in this file.
-
-# For more details on how to configure your build environment visit
-# http://www.gradle.org/docs/current/userguide/build_environment.html
-
-# Specifies the JVM arguments used for the daemon process.
-# The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xmx1536m
-
-# When configured, Gradle will run in incubating parallel mode.
-# This option should only be used with decoupled projects. More details, visit
-# http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
-# org.gradle.parallel=true
+POM_DEVELOPER_ID=mready
+POM_DESCRIPTION=Layouts with a loading state for Android
+POM_URL=https://github.com/mReady/progress-layouts
