--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.2"
+    compileSdkVersion 27
+    buildToolsVersion "27.0.3"
 
     defaultConfig {
         applicationId "net.mready.progresslayouts.demo"
         minSdkVersion 16
-        targetSdkVersion 26
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
     }
@@ -15,7 +15,7 @@ android {
 
 
 dependencies {
-    compile project(':library')
-    compile 'com.android.support:appcompat-v7:26.1.0'
-    compile 'com.airbnb.android:lottie:2.3.0'
+    implementation project(':library')
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.airbnb.android:lottie:2.5.5'
 }
