Updated to androidx; Reverted to MaterialProgressDrawable;

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,6 @@ VERSION_NAME=1.1.0
 POM_DEVELOPER_ID=mready
 POM_DESCRIPTION=Layouts with a loading state for Android
 POM_URL=https://github.com/mReady/progress-layouts
+
+android.useAndroidX=true
+android.enableJetifier=true
