--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -1,13 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 27
-    buildToolsVersion "27.0.3"
+    compileSdkVersion 29
 
     defaultConfig {
         applicationId "net.mready.progresslayouts.demo"
         minSdkVersion 16
-        targetSdkVersion 27
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
     }
@@ -16,6 +15,6 @@ android {
 
 dependencies {
     implementation project(':library')
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.airbnb.android:lottie:2.5.5'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'com.airbnb.android:lottie:3.3.1'
 }
