--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -16,5 +16,10 @@ android {
 dependencies {
     implementation project(':library')
     implementation 'androidx.appcompat:appcompat:1.1.0'
+
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
+    implementation 'com.google.android.material:material:1.1.0'
+
     implementation 'com.airbnb.android:lottie:3.3.1'
 }
