Updated publish configuration for maven central

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,23 @@
 GROUP=net.mready.progresslayouts
 VERSION_NAME=1.1.0
 
-POM_DEVELOPER_ID=mready
+RELEASE_REPOSITORY_URL=https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/
+SNAPSHOT_REPOSITORY_URL=https://s01.oss.sonatype.org/content/repositories/snapshots/
+
 POM_DESCRIPTION=Layouts with a loading state for Android
-POM_URL=https://github.com/mReady/progress-layouts
+
+POM_DEVELOPER_ID=mready
+POM_DEVELOPER_NAME=mReady
+POM_DEVELOPER_URL=https://github.com/mready/
+
+POM_URL=https://github.com/mready/progress-layouts
+POM_SCM_URL=https://github.com/mready/progress-layouts/
+POM_SCM_CONNECTION=scm:git:git://github.com/mready/progress-layouts.git
+POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/mready/progress-layouts.git
+
+POM_LICENCE_NAME=The Apache Software License, Version 2.0
+POM_LICENCE_URL=https://www.apache.org/licenses/LICENSE-2.0.txt
+POM_LICENCE_DIST=repo
 
 android.useAndroidX=true
 android.enableJetifier=true
